style.css
* {
  padding: 0;
  margin: 0;
  box-sizing: border-box;
  font-family: "Source Code Pro", sans-serif;
  scroll-behavior: smooth;
}

body,
html {
  height: 100%;
}

.header {
  display: flex;
  justify-content: space-between;
  width: 100%;
  padding: 10px 100px;
  position: absolute;
  background-color: rgba(5, 6, 8, 0.5);
  align-items: center;
}

/* .logo {
  font-size: 2em;
  color: white;
  pointer-events: none;
} */

.navigation a {
  font-size: 1em;
  color: white;
  text-decoration: none;
  padding: 10px;
}

nav.navigation a:hover {
  border-bottom: 1px solid #10a37f;
}

.parallax {
  background-image: url("images/homepage-bckg.png");
  height: 100%;
  background-attachment: fixed;
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
}

.parallax_content {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
  gap: 10%;
  padding: 30% 5% 5%;
}
.box {
  color: white;
  text-align: center;
  padding: 7%;
  max-height: 500px;
}
.box h1 {
  font-size: 3em;
  text-decoration: underline;
  margin-bottom: 4%;
}
.box p {
  font-size: 1.8em;
}
.box-chatgpt {
  background-color: #18a0fb;
  border: 5px solid #18a0fb;
  transition: 0.5s;
  cursor: pointer;
  text-decoration: none;
}
.box-AI {
  background-color: #f28157;
  border: 5px solid #f28157;
  transition: 0.5s;
  cursor: pointer;
  text-decoration: none;
}
.box-chatgpt:hover {
  border: 5px solid #18a0fb;
  box-shadow: 25px 25px #18a0fb;
  background-color: white;
  color: #18a0fb;
  transition: 0.5s;
  transform: translate(40px, 40px);
}

.box-AI:hover {
  border: 5px solid #f28157;
  box-shadow: -25px 25px #f28157;
  background-color: white;
  color: #f28157;
  transition: 0.5s;
  transform: translate(-40px, -40px);
}

.footerLogo {
  width: 100px;
  height: 50px;
}

.flex-footer {
  display: flex;
  justify-content: space-between;
  color: #194198;
}

.flex-footer > * {
  margin: 10px 50px;
}
/* .logo{
  width:50px;
} */
/* ChatGPT Styling */

.parallax-chatgpt {
  background-image: url("images/chatgpt-bckg.webp");
  height: 100%;
  background-attachment: fixed;
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  display: flex;
  align-items: flex-end;
  justify-content: center;
}
.chatgpt-arrow {
  cursor: pointer;
  background-color: rgba(5, 6, 8, 0.5);
  padding: 10px;
  animation: shake 0.7s;
}

.chatgpt-title {
  font-size: 2.5em;
  padding: 30px;
  font-weight: bold;
  border-bottom: 5px solid #f28157;
  position: relative;
  margin-right: 35rem;
  margin-left: 1rem;
  line-height: 3rem;
}
.chatgpt-content {
  display: flex;
  justify-content: space-between;
}
.chatgpt-logo {
  width: 250px;
  height: 250px;
  padding-right: 30px;
}
.chatgpt-text {
  width: 50%;
  line-height: 2rem;
  margin-left: 2.6rem;
  margin-top: 1.5rem;
  font-size: 1.4em;
}

.FooterText-2 {
  color: white;
}
.content {
  padding: 10%;
  color: white;
  background-color: #194198;
  border-top: 64px solid rgba(25, 65, 152, 0.5);
  box-shadow: 10px;
  box-shadow: 0px -20px 20px #194198;
}

/* AI Styling */
.ai-body{
  height :auto
}
.ai-parallax {
  background-image: url("images/ai-background.png");
  height: 100%;
  background-attachment: fixed;
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
}

.ai-parallax-content {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}

.ai-box {
  width: 330px;
  height: 650px; 
  color: white;
  text-align: center;
  padding: 1%;
  margin-top: 200px;
  overflow: hidden;
  transition: 1s;
  margin-bottom: 200px
}


.slide-learning {
  position: absolute;
  left: -350px;
  width: 750px;
  height: 500px;
  transition: 1s;
  background-color: rgb(15, 163, 127);
  box-shadow: 2px 2px 10px 5px #5dddf8;
}

.slide-intelligence {
  position: absolute;
  right: -350px;
  width: 750px;
  height: 500px;
  transition: 1s;
  background-color: rgb(24,65,152);
  box-shadow: 2px 2px 10px 5px #5dddf8;
}


.slide-consciousness {
  position: absolute;
  left: -350px;
  width: 750px;
  height: 500px;
  transition: 1s;
  background-color: rgb(242, 129, 87);
  box-shadow: 2px 2px 10px 5px #5dddf8;
}

.ai-box:hover .slide-learning{
  transition: 1s;
  left: 0;
  box-shadow: 2px 2px 20px 10px #5dddf8;
}


.ai-box:hover .slide-intelligence{
  transition: 1s;
  right: 0;
  box-shadow: 2px 2px 20px 10px #5dddf8;
}

.ai-box:hover .slide-consciousness{
  transition: 1s;
  left: 0;
  box-shadow: 2px 2px 20px 10px #5dddf8;
}


.machine-intelligence {
  align-self: flex-end;
}

.ai-box h1 {
  margin-top: 15px;
  margin-bottom: 15px;
}
.ai-box p {
  margin-top: 15px;
  font-size: 20px;
}

/* Animation */

@keyframes shake {
  0% {
    transform: translate(2px, 2px) rotate(0deg);
  }
  10% {
    transform: translate(-2px, -3px) rotate(-1deg);
  }
  20% {
    transform: translate(-4px, 1px) rotate(1deg);
  }
  30% {
    transform: translate(4px, 3px) rotate(0deg);
  }
  40% {
    transform: translate(2px, -2px) rotate(1deg);
  }
  50% {
    transform: translate(-2px, 3px) rotate(-1deg);
  }
  60% {
    transform: translate(-4px, 2px) rotate(0deg);
  }
  70% {
    transform: translate(4px, 2px) rotate(-1deg);
  }
  80% {
    transform: translate(-2px, -2px) rotate(1deg);
  }
  90% {
    transform: translate(2px, 3px) rotate(0deg);
  }
  100% {
    transform: translate(2px, -3px) rotate(-1deg);
  }
}

